app/templates/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth.default.svc.cluster.local:9000/auth"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User-ID,X-Auth-Request-User-Email"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 8080
        path: /show-profile
      - backend:
          serviceName: app
          servicePort: 8080
        path: /update-profile
